--- a/app/views/royalties/ips/payments/show.html.erb
+++ b/app/views/royalties/ips/payments/show.html.erb
@@ -5,12 +5,12 @@
 
 <h1>IPS Payment Advice</h1>
 
-<div class="d-flex gap-5 align-items-center">
+<div class="d-flex gap-5 justify-content-between align-items-center">
   <table class="table table-sm w-auto mt-4">
     <tbody>
       <tr class="align-middle">
         <th class="text-secondary ps-0">Payment amount:</th>
-        <td class="text-primary fs-3"><%= number_to_currency(@payment.total_amount) %></td>
+        <td class="fs-3"><%= number_to_currency(@payment.total_amount) %></td>
       </tr>
       <tr>
         <th class="text-secondary ps-0">Status:</th>
@@ -35,36 +35,9 @@
         </tr>
     </tbody>
   </table>
-  <div class="card" style="max-width: 20em">
-      <div class="card-header">
-        <h4 class="text-secondary">Step one</h5>
-      </div>
-      <div class="card-body">
-        <p class="card-text">First, click here to reconcile these line items with existing IPS statements.</p>
-        <%= link_to(reconcile_royalties_ips_payment_path(@payment),
-                    class: "btn btn-primary",
-                    method: :put,
-                    data: { turbo_method: :put,
-                            # turbo_confirm: "Are you sure you want to reconcile this payment? This action cannot be undone."
-                    }) do %>
-            <i class="bi bi-arrow-repeat pe-2"></i>
-            Reconcile
-          <% end %>
-      </div>
-    </div>
-    <div class="card" style="max-width: 20em">
-      <div class="card-header">
-        <h4 class="text-secondary">Step two</h5>
-      </div>
-      <div class="card-body">
-        <p class="card-text">Next, click here to import this payment into the royalty system.</p>
-        <h5 class="mb-0">
-          <button class="btn btn-primary">
-            Import royalties
-          </button>
-        </h5>
-      </div>
-    </div>
+
+  <%= render partial: "next_steps", locals: { payment: @payment } %>
+
 </div>
 <%= link_to "Back to all payments", royalties_ips_payments_path, class: "text-secondary my-3" %>
 
@@ -84,10 +57,11 @@
         <th class="text-end text-secondary pe-4">Discount</th>
       <% end %>
       <th class="text-end pe-4">Paid Amount</th>
+      <th>Reconciled</th>
   </thead>
   <tbody>
     <% @payment.ips_payment_advice_lines.each do |line| %>
-      <%= render partial: "payment_advice_line", locals: { line:, discounts_taken:  } %>
+      <%= render partial: "payment_advice_line", locals: { line:, discounts_taken:, focus_line: @focus_line } %>
     <% end %>
   </tbody>
 </table>
