--- a/app/views/royalties/ips/payments/_payment_advice_line.html.erb
+++ b/app/views/royalties/ips/payments/_payment_advice_line.html.erb
@@ -16,7 +16,7 @@
         line.ips_statement_detail.ips_statement,
         line.ips_statement_detail,
         anchor: dom_id(line.ips_statement_detail)
-      ), class: "info-link ps-2", title: "View payment") do %>
+      ), class: "info-link ps-2", title: "View corresponding statement") do %>
           <i class="bi bi-eye fs-4"></i>
         <% end %>
     </td>
