--- a/app/views/royalties/ips/payments/show.html.erb
+++ b/app/views/royalties/ips/payments/show.html.erb
@@ -6,7 +6,7 @@
 <h1>IPS Payment Advice</h1>
 
 <div class="d-flex gap-5 justify-content-between align-items-center">
-  <table class="table table-sm w-auto mt-4">
+  <table class="table table-sm w-auto mt-4 mb-5">
     <tbody>
       <tr class="align-middle">
         <th class="text-secondary ps-0">Payment amount:</th>
