Add import summary. Rewrite royalty import tests

--- a/app/views/royalties/ips/payments/_next_steps.html.erb
+++ b/app/views/royalties/ips/payments/_next_steps.html.erb
@@ -1,44 +1,51 @@
 
 <div class="d-flex gap-4 my-4 align-items-stretch flex-wrap" id="next-steps">
-  <% reconciled = payment.all_reconciled? %>
-  <div class="card <%= reconciled && 'opacity-50'%>" style="max-width: 20em">
-    <div class="card-body d-flex align-items-center gap-4">
-      <h1 class="text-info m-0 p-0"><i class="bi bi-1-circle-fill"></i></h1>
-      <p class="card-text">First, click here to reconcile these line items with existing IPS statements.</p>
+  <% if payment.status == IpsPaymentAdvice::STATUS_IMPORTED %>
+    <div class="alert alert-info w-100" role="alert">
+      <i class="bi bi-info-circle-fill pe-2"></i>
+      Imported into PIP.
     </div>
-    <div class="card-footer">
-      <%= link_to(reconcile_royalties_ips_payment_path(payment),
-                  class: "w-100 btn btn-primary#{' pe-none' if reconciled}",
-                  method: :put,
-                  data: { turbo_method: :put,
-                  }) do %>
-                  <i class="bi bi-arrow-repeat pe-2"></i>
-                  Reconcile
-                <% end %>
+  <% else %>
+    <% reconciled = payment.all_reconciled? %>
+    <div class="card <%= reconciled && 'opacity-50'%>" style="max-width: 20em">
+      <div class="card-body d-flex align-items-center gap-4">
+        <h1 class="text-info m-0 p-0"><i class="bi bi-1-circle-fill"></i></h1>
+        <p class="card-text">First, click here to reconcile these line items with existing IPS statements.</p>
+      </div>
+      <div class="card-footer">
+        <%= link_to(reconcile_royalties_ips_payment_path(payment),
+                    class: "w-100 btn btn-primary#{' pe-none' if reconciled}",
+                    method: :put,
+                    data: { turbo_method: :put,
+                    }) do %>
+                    <i class="bi bi-arrow-repeat pe-2"></i>
+                    Reconcile
+                  <% end %>
+      </div>
     </div>
-  </div>
 
-  <div class="card <%=  !reconciled && 'opacity-50'%>" style="max-width: 20em">
-    <div class="card-body d-flex align-items-center gap-4">
-      <h1 class="text-info m-0 p-0"><i class="bi bi-2-circle-fill"></i></h1>
-      <p class="card-text">
-      Next, click here to import this payment into the royalty system.
-      <i class="ps-2">(This can only be done once all line items are reconciled.)</i>
-      </p>
+    <div class="card <%=  !reconciled && 'opacity-50'%>" style="max-width: 20em">
+      <div class="card-body d-flex align-items-center gap-4">
+        <h1 class="text-info m-0 p-0"><i class="bi bi-2-circle-fill"></i></h1>
+        <p class="card-text">
+        Next, click here to import this payment into the royalty system.
+        <i class="ps-2">(This can only be done once all line items are reconciled.)</i>
+        </p>
+      </div>
+      <div class="card-footer">
+        <%= link_to(import_royalties_ips_payment_path(payment),
+                    class: "w-100 btn btn-primary#{' pe-none' unless reconciled}",
+                    method: :put,
+                    data: { turbo_method: :put,
+                            turbo_confirm: "Are you sure you want to import this payment into PIP royalties? This action cannot be undone."
+                    }) do %>
+                    <i class="bi bi-cash-coin pe-2"></i>
+                    Import payment
+                  <% end %>
+                  </h5>
+      </div>
     </div>
-    <div class="card-footer">
-      <%= link_to(reconcile_royalties_ips_payment_path(payment),
-                  class: "w-100 btn btn-primary#{' pe-none' unless reconciled}",
-                  method: :put,
-                  data: { turbo_method: :put,
-                          turbo_confirm: "Are you sure you want to import this payment into PIP royalties? This action cannot be undone."
-                  }) do %>
-                  <i class="bi bi-cash-coin pe-2"></i>
-                  Import payment
-                <% end %>
-                </h5>
-    </div>
-  </div>
+  <% end %>`
 </div>
 
 
