--- a/app/views/royalties/ips/statements/index.html.erb
+++ b/app/views/royalties/ips/statements/index.html.erb
@@ -29,7 +29,7 @@
       <th> Uploaded </th>
       <th> Status </th>
       <th> STMT Total </th>
-      <th> Uploaded file </th>
+      <th> Last uploaded file </th>
       <th></th>
     </tr>
   </thead>
