finish off multi-detail reconciliation

--- a/app/views/royalties/ips/payments/_payment_advice_line.html.erb
+++ b/app/views/royalties/ips/payments/_payment_advice_line.html.erb
@@ -10,15 +10,17 @@
   <td class="text-end pe-4"><%= number_to_currency(line.gross_amount) %></td>
 
   <% if line.reconciled? %>
-    <td class="text-success text-center pe-4">
+    <td class="text-success text-left pe-4">
       <i class="bi bi-check-circle-fill pe-2" title="Reconciled"></i>
-      <%= link_to(focus_line_royalties_ips_statement_path(
-        line.ips_statement_detail.ips_statement,
-        line.ips_statement_detail,
-        anchor: dom_id(line.ips_statement_detail)
-      ), class: "info-link ps-2", title: "View corresponding statement") do %>
-          <i class="bi bi-eye fs-4"></i>
-        <% end %>
+      <% for detail in line.ips_statement_details %>
+        <%= link_to(focus_line_royalties_ips_statement_path(
+          detail.ips_statement,
+          detail,
+          anchor: dom_id(detail)
+        ), class: "info-link ps-2", title: "View corresponding statement") do %>
+        <i class="bi bi-eye fs-4"></i>
+      <% end %>
+    <% end %>
     </td>
   <% else %>
     <td class="text-secondary text-center pe-4"><i class="bi bi-x-circle" title="Not reconciled"></i></td>
